added civil unions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <iframe height="400" width="500" src="civil_2013.html"></iframe>
         <iframe height="400" width="500" src="civil_2014.html"></iframe>
 
-        <img src="marriages_per_months.png"></img>
+        <img src="marriages_per_months.png"></img> 
+        <img src="civil_unions_per_months.png"></img>
 
     </body>
 </html>
